Bug fix: main margin shifting nav bar Add shadow to nav bar

--- a/docs/style.css
+++ b/docs/style.css
@@ -31,10 +31,6 @@ body {
     margin: 0;
 }
 
-main {
-    margin: 3rem;
-}
-
 main h1 {
     font-family: "Fjalla One";
     color: var(--primary-color);
@@ -42,6 +38,7 @@ main h1 {
 }
 
 main section {
+    padding: 2rem;
     display: flex;
     flex-direction: column;
     gap: 2rem;
@@ -51,6 +48,7 @@ nav {
     background: var(--background-color);
     border-radius: 0 0 50px 0;
     height: fit-content;
+    box-shadow: 3px 3px 15px 4px rgba(0,0,0,0.50);
 }
 
 nav > ol {
